--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,12 @@
-log4j.rootLogger=WARN, stdout
-log4j.logger.org.poormanscastle=DEBUG
+log4j.rootLogger=WARN, fileAppender
+log4j.logger.org.poormanscastle=INFO
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-# log4j.appender.stdout.layout=org.poormanscastle.studies.mvc.tools.logger.ANSIColorLayout
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.fileAppender.File=hitass.log
+log4j.appender.fileAppender.MaxFileSize=80MB
+log4j.appender.fileAppender.MaxBackupIndex=1
+# log4j.appender.fileAppender.layout=org.poormanscastle.studies.mvc.tools.logger.ANSIColorLayout
+log4j.appender.fileAppender.layout=org.apache.log4j.PatternLayout
 
 # Print the date in ISO 8601 format
-log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c:%L - %m%n
+log4j.appender.fileAppender.layout.ConversionPattern=%d [%t] %-5p %c:%L - %m%n
