--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=WARN, fileAppender
-log4j.logger.org.poormanscastle=ERROR
+log4j.rootLogger=ERROR, fileAppender
+log4j.logger.org.poormanscastle=WARN
 
 log4j.appender.fileAppender=org.apache.log4j.RollingFileAppender
 log4j.appender.fileAppender.File=hitass.log
